# amplifier-voice

./: .gitignore  .gitignore.bak.cascade  .mempalaceignore  entities.json  mempalace.yaml  run.sh
docs/: FUTURE-IDEAS.md
docs/plans/: 2026-03-10-realtime-1.5-upgrade-design.md
voice-client/: package-lock.json  package.json  vite.config.ts
voice-client/src/components/: VoiceChat.tsx
voice-client/src/hooks/: useChatMessages.ts  useVoiceChat.ts
voice-server/: .env.example  pyproject.toml
voice-server/tests/: test_dispatch_tool.py  test_prompt_updates.py  test_service_sideband.py  test_sideband.py
voice-server/voice_server/: amplifier_bridge.py  config.py  realtime.py  service.py  sideband.py
voice-server/voice_server/tools/: dispatch_tool.py
